# Scheduler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  schema.sql  vcpkg.json
.github/workflows/: build-and-release.yml
src/: main.cpp
src/Api/: HttpServerService.cpp  HttpServerService.h  StaticFileService.cpp  StaticFileService.h
src/Api/Controllers/: LogController.cpp  LogController.h  TaskController.cpp  TaskController.h
src/Api/Validators/: IValidator.h  LogDeleteValidator.cpp  LogDeleteValidator.h  TaskValidator.cpp  TaskValidator.h
src/Core/: CronEvaluator.cpp  CronEvaluator.h  EventManager.h
src/Database/: DatabaseLogger.h  IDatabase.h  MySqlDatabase.cpp  MySqlDatabase.h
src/Execution/: HttpTaskExecutor.cpp  HttpTaskExecutor.h  ITaskExecutor.h
src/Scheduler/: SchedulerService.cpp  SchedulerService.h
wwwroot/: index.html  styles.css
wwwroot/js/: main.js  router.js
wwwroot/js/components/: cronBuilder.js  cronInput.js  logDetailView.js  logsView.js  stores.js  taskForm.js  tasksView.js
wwwroot/js/services/: ApiClient.js  ConnectionMonitor.js  CronParser.js  LogService.js  TaskService.js
